section three - design completed

--- a/index.html
+++ b/index.html
@@ -48,15 +48,17 @@
       </section>
       <section class="l-box">
         <div class="three">
-          <div class="box-red">
+          <div class="box-red box-red--one">
             <div class="box-red__title">LA NOSTRA STORIA</div>
             <div class="box-red__tab">IERI</div>
             <div class="box-red__tab box-red__tab--no-select">OGGI</div>
             <div class="box-red__tab box-red__tab--no-select">DOMANI</div>
             <div class="box-red__content">Form-art &egrave; nata con l'intento di diffondere la cultura attraverso attivit&agrave; legate al territorio e di creare un gruppo eterogeneo, per provenienza sociale en et&agrave;, legato dalla passione per le arti.</div>
             <div class="box-red--deco-1"></div>
+            <div class="box-red--deco-3"></div>
           </div>
-          <div class="box-red">
+          <div class="box-red box-red--two">
+            <div class="box-red--deco-2"></div>
             <div class="box-red__title">QUELLO CHE FACCIAMO</div>
             <div class="box-red__list">
               <h2 class="h2">PROGETTO INTEGRATO<br>"MAI SOLI CON UN LIBRO"</h2>
@@ -71,8 +73,6 @@
               </ul>
             </div>
             <div class="box-red__bottom">E CHE GI&Agrave; ABBIAMO FATTO [] Apri il PDF</div>
-            <div class="box-red--deco-2"></div>
-            <div class="box-red--deco-3"></div>
           </div>
         </div>
       </section>
