--- a/index.html
+++ b/index.html
@@ -50,10 +50,14 @@
         <div class="three">
           <div class="box-red box-red--one">
             <div class="box-red__title">LA NOSTRA STORIA</div>
-            <div class="box-red__tab">IERI</div>
-            <div class="box-red__tab box-red__tab--no-select">OGGI</div>
-            <div class="box-red__tab box-red__tab--no-select">DOMANI</div>
-            <div class="box-red__content">Form-art &egrave; nata con l'intento di diffondere la cultura attraverso attivit&agrave; legate al territorio e di creare un gruppo eterogeneo, per provenienza sociale en et&agrave;, legato dalla passione per le arti.</div>
+            <div class="box-red__tab tab-ieri">IERI</div>
+            <div class="box-red__tab tab-oggi box-red__tab--active">OGGI</div>
+            <div class="box-red__tab tab-domani box-red__tab--active">DOMANI</div>
+            <div class="box-red__content"> 
+              <p class="p-ieri">Form-art &egrave; nata con l'intento di diffondere la cultura attraverso attivit&agrave; legate al territorio e di creare un gruppo eterogeneo, per provenienza sociale en et&agrave;, legato dalla passione per le arti.</p>
+              <p class="p-oggi h-d-none">Form-art &egrave; nata con l'intento di diffondere la cultura attraverso attivit&agrave; legate al territorio e di creare un gruppo eterogeneo, per provenienza sociale en et&agrave;, legato dalla passione per le arti.</p>
+              <p class="p-domani h-d-none">Form-art &egrave; nata con l'intento di diffondere la cultura attraverso attivit&agrave; legate al territorio e di creare un gruppo eterogeneo, per provenienza sociale en et&agrave;, legato dalla passione per le arti.</p>
+            </div>
             <div class="box-red--deco-1"></div>
             <div class="box-red--deco-3"></div>
           </div>
@@ -72,7 +76,7 @@
                 <li>V.I.S.</li>
               </ul>
             </div>
-            <div class="box-red__bottom">E CHE GI&Agrave; ABBIAMO FATTO [] Apri il PDF</div>
+            <div class="box-red__bottom">E CHE GI&Agrave; ABBIAMO FATTO <img src="img/icon-doc.png" /> Apri il PDF</div>
           </div>
         </div>
       </section>
