Slide three __ Template completed

--- a/index.html
+++ b/index.html
@@ -78,6 +78,18 @@
             </div>
             <div class="box-red__bottom">E CHE GI&Agrave; ABBIAMO FATTO <img src="img/icon-doc.png" /> Apri il PDF</div>
           </div>
+          <div class="box-red__tab-mask h-d-none">
+            <div class="box-red__tab-mask__container"><i class="icon box-red__tab-mask__icon">&#10006;</i>
+              <h3>IL LIBRO RITROVATO</h3>
+              <p>Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa.</p>
+            </div>
+          </div>
+          <div class="box-red__tab-mask h-d-none">
+            <div class="box-red__tab-mask__container"><i class="icon box-red__tab-mask__icon">&#10006;</i>
+              <h3>UN LIBRO AL SOLE</h3>
+              <p>Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa.</p>
+            </div>
+          </div>
         </div>
       </section>
       <section class="l-box">
