Slide four - first relase - Height content--back needs to be fixed

--- a/index.html
+++ b/index.html
@@ -93,7 +93,17 @@
         </div>
       </section>
       <section class="l-box">
-        <div class="four"></div>
+        <div class="four">
+          <div class="become">
+            <div class="become__title">DIVENTA PARTE DELLA NOSTRA COMUNIT&Agrave;</div>
+            <div class="become__content-container">
+              <div class="become__content--back"></div>
+              <div class="become__content">Stiamo cercando <b>persone propositive</b>, interessate a intraprendere un <b>percorso di creazione di valore nella societ&agrave;</b>. L'et&agrave; non &egrave; importante, <b>tutti possono contribuire</b>.</div>
+              <div class="become__content--bullet"></div>
+            </div>
+            <div class="become__footer">PARTECIPA AL CAMBIAMENTO. DIVENTA PROTAGONISTA.</div>
+          </div>
+        </div>
       </section>
     </main><!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script><!-- Include all compiled plugins (below), or include individual files as needed -->
