--- a/index.html
+++ b/index.html
@@ -105,8 +105,13 @@
           </div>
         </div>
       </section>
-    </main><!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    </main>
+    <div class="controller">
+      <div class="a"> </div>
+      <div class="b"> </div>
+      <div class="c"></div>
+    </div><!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script><!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/test.js"></script>
+    <script src="js/headerBulletMenu__hide-show.js"></script>
   </body>
 </html>
