--- a/index.html
+++ b/index.html
@@ -113,5 +113,6 @@
     </div><!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script><!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/headerBulletMenu__hide-show.js"></script>
+    <script src="js/fourBecomeContentBack__autoResize.js"></script>
   </body>
 </html>
